<resources>
    <string name="app_name">NurseNfcClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_bed_name">病房列表</string>
    <string name="login">登  录</string>
    <string name="logging">登录中，请等待...</string>
    <string name="login_toolbar">登录界面</string>
    <string name="id_hint">请输入工号：</string>
    <string name="set_net">登录出现问题?</string>

    <string name="login_fail">用户名或密码出错</string>

    <string name="download_hint_text">数据加载中，请勿退出程序...</string>
    <string name="downloaded_hint_text">数据加载完成，正在存入本地！</string>
    <string name="downloaded_hint_text_failed">数据加载失败，请您重新登录！</string>
    <string name="get_image_hint">正在加载图片 </string>
    <string name="downloaded_hint_into_db_success">数据写入成功！</string>
    <string name="downloaded_hint_into_db_failure">数据写入失败！</string>
    <string name="downloaded_wrong_nurse_id">您输入的护士号有误！</string>

    <string name="netset_text">网络设置</string>
    <string name="wifi_set">WLAN管理</string>
    <string name="nfc_set">NFC管理</string>
    <string name="usb_set">USB管理</string>
    <string name="bluetooth_set">蓝牙管理</string>
    <string name="alarm_set">提醒设置</string>

    <string name="ip_address">IP地址:</string>
    <string name="dot">.</string>
    <string name="port_num"> :</string>

    <string name="checkin_toolbar">确认信息</string>
    <string name="checkin_name">姓名</string>
    <string name="checkin_gender">性别</string>
    <string name="checkin_age">年龄</string>
    <string name="checkin_project">科室</string>
    <string name="checkin_nurseid">护士工号</string>

    <string name="checkin_name_test">张三</string>
    <string name="checkin_gender_test">女</string>
    <string name="checkin_age_test">21</string>
    <string name="checkin_project_test">内科 急诊室</string>
    <string name="checkin_nurseid_test">N300123456</string>

    <string name="checkin_correct">信息正确</string>
    <string name="checkin_error">信息错误</string>

    <string name="task_remain_txt">总共：30人/10房  剩余：21人/7房</string>
    <string name="house_head_txt">A栋1楼</string>

    <string name="header_refresh">正在获取最新信息，请稍后...</string>

    <string name="houseid_txt">A0132房</string>
    <string name="houseid_txt_head">房间号</string>

    <string name="house_remain_num_head">已完成</string>
    <string name="house_remain_num">7/10人</string>

    <string name="bed_info_title">病人信息</string>

    <string name="bed_info_bedid">病床号码</string>
    <string name="bed_info_patientid">病人号码</string>
    <string name="bed_info_bedstate">状态</string>
    <string name="bed_info_patientname">病人姓名</string>
    <string name="bed_info_patientage">年龄</string>
    <string name="bed_ingo_patientgender">性别</string>
    <string name="bed_info_patient_record">病历描述</string>
    <string name="bed_info_lasttemper">上次测量</string>

    <string name="bed_info_bedid_test">01</string>
    <string name="bed_info_patientid_test">3456789</string>
    <string name="bed_info_bedstate_test">未测量</string>
    <string name="bed_info_patientname_test">李四</string>
    <string name="bed_info_patientage_test">25</string>
    <string name="bed_ingo_patientgender_test">男</string>
    <string name="bed_info_patient_record_test">感冒低烧</string>
    <string name="bed_info_lasttemper_test">38度</string>

    <string name="bed_pop_info_bedid">病床</string>
    <string name="bed_pop_info_patientid">病号</string>
    <string name="bed_pop_info_bedstate">状态</string>
    <string name="bed_pop_info_patientname">姓名</string>
    <string name="bed_pop_info_patientage">年龄</string>
    <string name="bed_pop_ingo_patientgender">性别</string>
    <string name="bed_pop_info_patient_record">病历</string>
    <string name="bed_pop_info_lasttemper">上次测量</string>

    <string name="get_paired_text">TEST：已配对</string>
    <string name="get_unpair_text">TEST：未配对</string>
    <string name="searching_text">正在读取温度信息，请稍后...</string>
    <string name="searching_complete_text">已读取到温度贴信息！</string>
    <string name="searching_failed_text">读取温度贴信息失败  \n请您重新靠近手机重试！</string>

    <string-array name="searching_texts">
        <item>正在读取温度信息，请稍后</item>
        <item>正在读取温度信息，请稍后.</item>
        <item>正在读取温度信息，请稍后..</item>
        <item>正在读取温度信息，请稍后...</item>
    </string-array>


    <string name="wifi_not_open">WIFI未开启，正在开启WIFI...</string>
    <string name="wifi_close">WIFI已关闭</string>

    <string name="to_pair_hint">请先与病人匹配！</string>
    <string name="pair_hint">确定匹配？</string>
    <string name="pair_text">匹配</string>
    <string name="pair_failed">匹配失败</string>
    <string name="pair_success">匹配成功</string>

    <string name="nfc_onclick_hint">点击获取详细温度信息！</string>

    <string name="temper_head">温度测量</string>

    <string name="context_menu">主菜单</string>

    <string name="upload_title">确认上传数据？</string>
    <string name="upload_hint">上传数据后，您应用中的数据将仍然保存！</string>
    <string name="exit_title">确认退出应用？</string>
    <string name="exit_hint">退出应用后，您手机中的数据将会被清空</string>

    <string name="ensure_change_txt">确定修改</string>
    <string name="upload_txt">上传</string>
    <string name="exit_txt">退出</string>
    <string name="cancel_txt">取消</string>
    <string name="canceled_txt">已取消</string>

    <string name="uploading_hint">正在上传数据，请勿退出！</string>
    <string name="uploading_data_transfered_hint">数据上传成功，等待服务器响应！</string>
    <string name="upload_success_hint">数据上传成功！</string>
    <string name="upload_fail_hint">数据上传失败！</string>

    <string name="upload_exit_success">数据上传成功，正在安全退出！</string>
    <string name="upload_exit_fail">数据上传失败，请重新退出应用！</string>

    <string name="tag_lost_hint">标签未靠近，请重新将手机靠近标签！</string>
    <string name="data_not_valid">手机提供的功率不够温度贴完成一次温度采集!</string>

    <string name="empty_edittext_hint">请输入工号！</string>

    <string name="empty_input_hint">输入不能为空</string>
    <string name="change_net_success">修改网络成功</string>

    <string name="alarm_set_txt">设置提醒时间</string>
    <string name="alarm_cancel">删除闹钟</string>
    <string name="alarm_cancel_succ">删除闹钟成功！</string>
    <string name="alarm_time_set_succ">提醒功能设置成功！</string>
    <string name="alarm_time_set_fail">提醒功能设置失败，请重新设置！</string>

    <string name="has_no_nfc">您的手机不支持NFC功能！</string>
    <string name="nfc_not_open">NFC功能未打开！</string>
    <string name="nfc_not_open_hint">请先开启NFC！</string>
    <string name="get_nfc_data_fail">获取标签中数据失败！</string>

    <string name="need_login_hint">对不起！请您先登录！</string>

    <string name="menu_alarm_hint">提醒设置</string>
    <string name="menu_delay_hint">温测设置</string>
    <string name="menu_net_hint">网络设置</string>
    <string name="menu_self_hint">个人信息</string>
    <string name="menu_upload_hint">上传数据</string>
    <string name="menu_exit_hint">退出应用</string>

    <string name="set_next_time">设置病人下一次测量时间：</string>
    <string name="minute_delay">分钟后</string>

    <string name="min_delay_time_hint">您设置的时间间隔太短，请重新输入！</string>
    <string name="max_delay_time_hint">您设置的时间间隔过长，请重新输入！</string>
    <string name="wrong_delay_time_hint">输入不能为空！</string>
    <string name="delay_time_change_success">修改成功！</string>

    <string name="query_tag_failed">查询数据库中标签信息失败，请您重新扫描标签！</string>

    <string name="search_hint">输入房间号检索</string>

    <string-array name="house_ids">
        <item>A101</item>
        <item>A102</item>
        <item>A103</item>
        <item>A201</item>
        <item>A202</item>
        <item>A203</item>
        <item>A301</item>
        <item>A302</item>
        <item>A304</item>
        <item>A401</item>
        <item>A402</item>
        <item>A403</item>
        <item>A501</item>
        <item>A502</item>
        <item>A503</item>

        <item>B101</item>
        <item>B102</item>
        <item>B103</item>
        <item>B201</item>
        <item>B202</item>
        <item>B203</item>
        <item>B301</item>
        <item>B302</item>
        <item>B303</item>
    </string-array>

    <string-array name="floor_ids">
        <item>A栋1楼</item>
        <item>A栋2楼</item>
        <item>A栋3楼</item>
        <item>A栋4楼</item>
        <item>A栋5楼</item>
        <item>B栋1楼</item>
        <item>B栋2楼</item>
        <item>B栋3楼</item>
    </string-array>

    <string-array name="alarm_times">
        <item>15分钟</item>
        <item>30分钟</item>
        <item>60分钟</item>
        <item>关闭提醒</item>
    </string-array>

</resources>
