<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:id="@+id/mainIdLayout"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_gravity="center"
                >
                <TextView
                    android:id="@+id/text1"
                    style="@style/CheckInTextViewStyle"
                    android:text="@string/checkin_name"
                    />
                <TextView
                    android:id="@+id/text2"
                    style="@style/CheckInTextViewStyle"
                    android:text="@string/checkin_gender"
                    android:layout_below="@id/text1"
                    />
                <TextView
                    android:id="@+id/text3"
                    style="@style/CheckInTextViewStyle"
                    android:text="@string/checkin_age"
                    android:layout_below="@id/text2"
                    />
                <TextView
                    android:id="@+id/text4"
                    style="@style/CheckInTextViewStyle"
                    android:text="@string/checkin_project"
                    android:layout_below="@id/text3"
                    />
                <TextView
                    android:id="@+id/text5"
                    style="@style/CheckInTextViewStyle"
                    android:text="@string/checkin_nurseid"
                    android:layout_below="@id/text4"
                    />

                <TextView
                    android:id="@+id/nurseNameText"
                    style="@style/CheckInTextViewContentStyle"
                    android:text="@string/checkin_name_test"
                    android:layout_toRightOf="@id/text1"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/nurseGenderText"
                    style="@style/CheckInTextViewContentStyle"
                    android:text="@string/checkin_gender_test"
                    android:layout_below="@id/nurseNameText"
                    android:layout_toRightOf="@id/text2"
                    />
                <TextView
                    android:id="@+id/nurseAgeText"
                    style="@style/CheckInTextViewContentStyle"
                    android:text="@string/checkin_age_test"
                    android:layout_below="@id/nurseGenderText"
                    android:layout_toRightOf="@id/text3"
                    />
                <TextView
                    android:id="@+id/nurseProjectText"
                    style="@style/CheckInTextViewContentStyle"
                    android:text="@string/checkin_project_test"
                    android:layout_below="@id/nurseAgeText"
                    android:layout_toRightOf="@id/text4"
                    />
                <TextView
                    android:id="@+id/nurseIdText"
                    style="@style/CheckInTextViewContentStyle"
                    android:text="@string/checkin_nurseid_test"
                    android:layout_below="@id/nurseProjectText"
                    android:layout_toRightOf="@id/text5"
                    />

                <ImageView
                    android:id="@+id/nurseIdPhoto"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_toRightOf="@id/nurseProjectText"
                    android:scaleType="fitXY"
                    android:padding="10dp"
                    android:src="@mipmap/nurse_photo"
                    android:layout_marginLeft="40dp"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_below="@id/mainIdLayout"
            android:layout_marginTop="30dp"
            >

            <Button
                android:id="@+id/errorBt"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/check_error_bt"
                android:text="@string/checkin_error"
                android:textSize="18sp"
                android:drawableLeft="@mipmap/error_draw"
                android:paddingLeft="15dp"
                />
            <Button
                android:id="@+id/correctBt"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/rect_bg"
                android:text="@string/checkin_correct"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginLeft="55dp"
                android:drawableLeft="@mipmap/check_draw"
                android:paddingLeft="15dp"
                />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>