<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center"
        >
        <Button
            android:id="@+id/getPairedTagBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_paired_text"
            />
        <Button
            android:id="@+id/getUnpairTagBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_unpair_text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/searchingTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:text="@string/searching_text"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        />

</RelativeLayout>