<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_bg"
            android:scaleType="fitXY"
            android:src="@mipmap/nurse_photo"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rect_edit_bg"
            android:hint="@string/id_hint"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            />

        <Button
            android:id="@+id/loginBt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rect_bg"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/setNetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_net"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        android:textColor="@drawable/setnet_text_color"
        />


</RelativeLayout>