<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/edittext_rect_bg"
        android:layout_marginTop="2dp"
        >

        <Button
            android:id="@+id/setnetEnsureBt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ensure_bt"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@id/setnetEnsureBt"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ip_address"
                />
            <EditText
                android:id="@+id/ipEdit1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                />

            <EditText
                android:id="@+id/ipEdit2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                />

            <EditText
                android:id="@+id/ipEdit3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                />

            <EditText
                android:id="@+id/ipEdit4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/port_num"
                />
            <EditText
                android:id="@+id/portEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLength="5"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="12sp"
                />


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
